--- a/css/style.css
+++ b/css/style.css
@@ -24,11 +24,27 @@
     transform: rotate(360deg);
   }
 }
+@keyframes heart-slide {
+  from {
+    transform-origin: bottom;
+    transform: scaley(0);
+    opacity: 0.1;
+  }
+  to {
+    transform: scaley(1);
+    opacity: 1;
+  }
+}
 @media screen and (max-width: 768px) {
   body {
     width: 100%;
     font-family: Roboto, Times New Roman, Times, serif;
     background-color: #f5f5f5;
+  }
+  .loarder-section {
+    height: 100%;
+    width: 100%;
+    background-color: red;
   }
   .header {
     width: 100%;
@@ -40,7 +56,7 @@
   }
   .header .size-logo {
     display: flex;
-    width: 50%;
+    width: 160px;
     height: 40px;
   }
   .exploration {
@@ -97,9 +113,9 @@
     box-shadow: 5px 5px 5px #ebebeb;
   }
   .exploration .exploration-content .exploration-content__btn:hover {
-    filter: brightness(1.15);
+    filter: brightness(1.1);
     cursor: pointer;
-    box-shadow: 5px 5px 5px #363636;
+    box-shadow: 5px 5px 5px rgba(0, 0, 255, 0.2);
   }
   .user-guide {
     background-color: #ffffff;
@@ -189,9 +205,8 @@
     overflow: hidden;
   }
   .restaurant-list .restaurant-list-container .card-restaurant .card-restaurant__header .card-restaurant__header-img {
-    width: 100%;
+    min-width: 100%;
     height: 100%;
-    height: auto;
     object-fit: cover;
     border-radius: 16px 16px 0px 0px;
   }
@@ -226,6 +241,7 @@
     -webkit-background-clip: text;
     color: transparent;
     font-size: 24px;
+    animation: heart-slide 1s;
   }
   .restaurant-list .restaurant-list-container .card-restaurant .card-restaurant__btn .card-restaurant__btn-icon-umpty {
     font-size: 24px;
@@ -238,7 +254,7 @@
     display: none;
   }
   .restaurant-list .card-restaurant.new .card-restaurant__header::after {
-    font-size: 12px;
+    font-size: 14px;
     content: "Nouveau";
     position: absolute;
     padding: 6px 10px;
